--- a/28-12/index.html
+++ b/28-12/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DOM</title>
   </head>
   <body>
-    <span></span>
-    <div id="id"></div>
-    <div class="class"></div>
-    <div name="name"></div>
+    <h1 style="text-align: center">DOM</h1>
+    <div class="wrap">
+      <div></div>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+    <!-- Ko'rinmas! -->
+
+    <div class="wrapClass">Anything text!</div>
     <script src="./index.js"></script>
   </body>
 </html>
